# angavu-intelligence

./: .gitignore  .lighthouserc.json  BRAND_GUIDELINES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MISSION.md  PROFILE_README.md  README.md  SECURITY.md  SECURITY_CLEANUP.md  STRATEGY.md  WEBSITE_AUDIT.md  WEBSITE_STRATEGY.md  about.html  api.html  design-tokens.css  download.html  for-businesses.html  for-government.html  for-workers.html  index.html  manifest.json  msaidizi.html  privacy-policy.html  robots.txt  script.js  script.min.js  sitemap.xml  style.css  style.min.css  sw.js  swahili-content.js  technology.html  testimonials.html  vision.html
angavu-intelligence-backend/: Dockerfile  pyproject.toml
angavu-intelligence-backend/app/agents/: __init__.py  causal_reasoning.py  factory.py  intelligence_pipeline.py  subagent.py  task_decomposition.py
angavu-intelligence-backend/app/agents/coordination/: __init__.py  stigmergy.py
angavu-intelligence-backend/app/agents/loops/: __init__.py  plan_execute.py
angavu-intelligence-backend/app/agents/roles/: __init__.py  market_roles.py
angavu-intelligence-backend/app/api/v1/: gateway.py  whatsapp_connection.py  whatsapp_webhooks.py
angavu-intelligence-backend/app/channels/: __init__.py  gateway.py  registry.py  session_sync.py
angavu-intelligence-backend/app/channels/adapters/: __init__.py  app_adapter.py  base.py  sms_adapter.py  voice_adapter.py  whatsapp_adapter.py
angavu-intelligence-backend/app/models/: user.py
angavu-intelligence-backend/app/schemas/: __init__.py  agent_schemas.py
angavu-intelligence-backend/app/security/: jwt_config.py  phone_encryption.py
angavu-intelligence-backend/app/security/pqc/: __init__.py  ml_dsa.py  (+1 more)
angavu-intelligence-backend/app/services/: otp_service.py  whatsapp_bot.py  whatsapp_delivery.py  whatsapp_health.py
angavu-intelligence-backend/openwa/: .env.example  Dockerfile  docker-compose.yml  index.js
angavu-intelligence-backend/tests/: test_multichannel_gateway.py
(+149 files in other folders)
