[project]
name = "angavu-intelligence-backend"
version = "0.1.0"
description = "Angavu Intelligence Backend — AI-powered business assistant for East African SMEs"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12,<4.0"
authors = [
    {name = "Valentine", email = "valentine@angavu.ai"},
]

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "gunicorn>=22.0.0,<23.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "alembic>=1.14.0,<2.0",

    # --- Cache / Queue ---
    "redis[hiredis]>=5.2.0,<6.0",

    # --- Validation / Serialization ---
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",

    # --- HTTP client ---
    "httpx>=0.28.0,<1.0",

    # --- Auth ---
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",

    # --- AI / ML ---
    "openai>=1.58.0,<2.0",

    # --- Observability ---
    "structlog>=24.4.0,<25.0",
    "prometheus-client>=0.21.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=6.0.0,<7.0",
    "httpx>=0.28.0,<1.0",
    "mypy>=1.13.0,<2.0",
    "ruff>=0.8.0,<1.0",
    "bandit>=1.8.0,<2.0",
    "safety>=3.2.0,<4.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
